crates/test-ui/ui/msg_send_id_underspecified.stderr
error[E0282]: type annotations needed
 --> ui/msg_send_id_underspecified.rs
  |
  |     let _: &Object = &*unsafe { msg_send_id![obj, description] };
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
